--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "format": "prettier --write '**/*.{md,mdx,ts,js,mjs,cjs,jsx,tsx,yaml,yml,json,html,css,scss,vue,astro}'"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@astrojs/node": "^8.2.5",
-    "astro": "^4.9.2",
-    "fast-glob": "^3.3.2",
+    "@astrojs/node": "^9.5.0",
+    "astro": "^5.15.1",
+    "fast-glob": "^3.3.3",
     "vite-plugin-rails": "^0.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
+    "@types/bun": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1"
