--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.5.0",
+    "@astrojs/react": "^4.4.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "astro": "^5.15.1",
     "fast-glob": "^3.3.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "vite-plugin-rails": "^0.5.0"
   },
   "devDependencies": {
