Add a script to start with production settings.
This isn't production ready -- it's just an experiment with running both
frameworks in production mode.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "astro build",
+    "start": "./script/serve.sh",
     "dev:rails": "bin/rails server",
     "dev:astro": "astro dev",
     "dev": "run-p dev:*",
